contact page is updated

--- a/updated/Training_bootstrap.html
+++ b/updated/Training_bootstrap.html
@@ -120,22 +120,22 @@
    
   <div class="container" style="margin-top: 3vw;">
 
-    <h2><b>AR VR Hands on Design Training</b></h2>
+    <h2><b>AR VR Hands on Design Training Programee</b></h2>
 
-    <h5>Hands-on AR VR design training</h5>
+    <h6 class="mx-5 my-3">Hands-on AR VR design training</h6>
 
     <br>
 
-<div class="row">
-  <div class="row offset-md-1">
+<div class="row my-4">
+  <div class="row offset-2">
     <div class="col">
-    <h3 class="item-certify">Certified UX & UI<br><span>AR & VR Designer</span></h3>
+    <h4 class="item-certify">Certified UX & UI<br><span>AR & VR Designer</span></h4>
     </div>
     <div class="col">
-     <h3 class="item-certify cert1">Certified UX & UI<br><span>AR & VR Designer</span></h3>
+     <h4 class="item-certify cert1">Certified UX & UI<br><span>AR & VR Designer</span></h4>
     </div>
-    <div class="col">
-      <h3 class="item-certify cert2">Certified UX & UI<br><span>AR & VR Designer</span></h3>
+    <div class="  col">
+      <h4 class="item-certify cert2">Certified UX & UI<br><span>AR & VR Designer</span></h4>
     </div>
   </div>
 </div>
@@ -146,12 +146,14 @@
       <h5><b>Course Introduction</b></h5>
       </div>
       <br>
-      <div class="offset-3 row text-justify">
+      <div class="offset-2 row text-justify">
+        <div class="mx-5 my-2">
       Zynga is a leading developer of the world's most popular social games that are played by millions of people
       around the world each day. We are headquartered in San Francisco and have additional offices in the U.S ,
       Canada, U.K and India. Since our founding in 2007, our mission has been to connect the world through games
       and delight consumers with social gaming experiences. To-date, more than one billion people have played our
       games across Web and mobile, including FarmVille, Zynga Poker, Words With Friends, Hit it Rich! Slots and CSR.
+        </div>
      </div>
     </div>
     <br>
@@ -161,14 +163,15 @@
       <h5><b>What you’ll learn</b></h5>
       </div>
       <br>
-      <div class="offset-3 row text-justify">
+      <div class="offset-2 row text-justify">
+         <div class="mx-5 my-2">
       Development of key game systems.
       Contribute to design discussions and key design decisions.
       Work closely with designers, software engineers, artists, product managers, and producers to deliver high quality
       features from concept to completion.
       Create and maintain detailed designs for all phases of development.
       Clearly communicate design intent to team.
-      Experience developing mobile games for either iPhone or Android devices.
+      Experience developing mobile games for either iPhone or Android devices.</div>
      </div>
     </div>
     <br>
@@ -178,9 +181,10 @@
       <h5><b>Are there any course requirements or prerequisites?</b></h5>
       </div>
       <br>
-      <div class="offset-3 row text-justify">
+      <div class="offset-2 row text-justify">
+         <div class="mx-5 my-2">
       This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
-      your resume.
+      your resume.</div>
      </div>
     </div>
     <br>
@@ -190,9 +194,10 @@
       <h5><b>Who this course is for:</b></h5>
       </div>
       <br>
-      <div class="offset-3 row text-justify">
+      <div class="offset-2 row text-justify">
+         <div class="mx-5 my-2">
       This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
-      your resume.
+      your resume.</div>
      </div>
     </div>
 <br>
@@ -201,9 +206,10 @@
       <h5><b>what you will take away:</b></h5>
       </div>
       <br>
-      <div class="offset-3 row text-justify">
+      <div class="offset-2 row text-justify">
+         <div class="mx-5 my-2">
       This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
-      your resume.
+      your resume.</div>
      </div>
     </div>
 <br>
@@ -213,7 +219,8 @@
       <h5><b>Instructor:</b></h5>
       </div>
       <br>
-      <div class="offset-3 row" style="width: 100%;">
+      <div class="offset-2 row" style="width: 100%;">
+         <div class="mx-5 my-2 d-flex">
           <div class="col-1">
           <span>
             <img src="assets/round.png" class="round">
@@ -225,6 +232,7 @@
                CEO & CDO - Swevens Immersive Studio
           </span>
          </div>
+       </div>
       </div>
 
        <div class="offset-4 row text-center">
@@ -242,8 +250,10 @@
       <h5><b>Duration:</b></h5>
       </div>
       <br>
-      <div class="offset-3 row text-justify">
+      <div class="offset-2 row text-justify">
+         <div class="mx-5 my-2">
       <b>2 months (Mon - Wed - Fri)</b>
+          </div>
      </div>
    </div>
 
@@ -256,8 +266,10 @@
       <h5><b>Course Fee:</b></h5>
       </div>
       <br>
-      <div class="offset-3 row text-justify">
+      <div class="offset-2 row text-justify">
+         <div class="mx-5 my-2">
       <b>INR 25000</b> + Applicable taxes
+          </div>
      </div>
     </div>
 <br>
