--- a/updated/Training_bootstrap.html
+++ b/updated/Training_bootstrap.html
@@ -81,27 +81,40 @@
     user-select: none;
 }
 
+.ml-manual
+{
+  margin-left: -5em;
+}
+.content-inside
+{
+  color: #666666;
+}
+
 @media screen and (max-width: 598px)
 
 {
 
-    .cert1
+   /* .cert1
    {
     display: none;
+   }*/
+
+   .move-left
+   {
+    margin-left: -3em !important;
    }
-
-}
-
-
-@media screen and (max-width: 928px)
+   .mx-4
+   {
+      margin-left: 0em !important
+   }
+   .ml-manual
 {
-.cert2
-   {
-    display: none;
-   }
+  margin-left: -1em;
+}
 }
 
-@media screen and (max-width: 928px)
+
+@media screen and (max-width: 768px)
 {
 .cert2
    {
@@ -122,32 +135,32 @@
 
     <h2><b>AR VR Hands on Design Training Programee</b></h2>
 
-    <h6 class="mx-5 my-3">Hands-on AR VR design training</h6>
+    <h6 class="my-3" style="color: #727171;">Hands-on AR VR design training</h6>
 
     <br>
 
-<div class="row my-4">
-  <div class="row offset-2">
-    <div class="col">
-    <h4 class="item-certify">Certified UX & UI<br><span>AR & VR Designer</span></h4>
+<div class="row my-5">
+  <div class="row offset-1">
+    <div class="col ">
+    <h5 class="item-certify"><b>Certified UX & UI <br> AR & VR Designer</b></h5>
+    </div>
+    <div class=" col">
+     <h5 class="item-certify cert1"><b>Certified UX & UI <br> AR & VR Designer</b></h5>
     </div>
     <div class="col">
-     <h4 class="item-certify cert1">Certified UX & UI<br><span>AR & VR Designer</span></h4>
-    </div>
-    <div class="  col">
-      <h4 class="item-certify cert2">Certified UX & UI<br><span>AR & VR Designer</span></h4>
+     <h5 class="item-certify cert2"><b>Certified UX & UI <br> AR & VR Designer</b></h5>
     </div>
   </div>
 </div>
   <br>
-
-      <div class="row">
+      <div class="ml-manual">
+      <div class="row move-left">
       <div class="offset-2 row">
-      <h5><b>Course Introduction</b></h5>
+      <h5>Course Introduction</h5>
       </div>
       <br>
       <div class="offset-2 row text-justify">
-        <div class="mx-5 my-2">
+        <div class="mx-4 my-2 content-inside">
       Zynga is a leading developer of the world's most popular social games that are played by millions of people
       around the world each day. We are headquartered in San Francisco and have additional offices in the U.S ,
       Canada, U.K and India. Since our founding in 2007, our mission has been to connect the world through games
@@ -158,13 +171,13 @@
     </div>
     <br>
 
-    <div class="row">
+    <div class="row move-left">
       <div class="offset-2 row">
-      <h5><b>What you’ll learn</b></h5>
+      <h5>What you’ll learn</h5>
       </div>
       <br>
       <div class="offset-2 row text-justify">
-         <div class="mx-5 my-2">
+         <div class="mx-4 my-2 content-inside">
       Development of key game systems.
       Contribute to design discussions and key design decisions.
       Work closely with designers, software engineers, artists, product managers, and producers to deliver high quality
@@ -176,52 +189,52 @@
     </div>
     <br>
 
-    <div class="row">
+    <div class="row move-left">
       <div class="offset-2 row">
-      <h5><b>Are there any course requirements or prerequisites?</b></h5>
+      <h5>Are there any course requirements or prerequisites?</h5>
       </div>
       <br>
       <div class="offset-2 row text-justify">
-         <div class="mx-5 my-2">
+         <div class="mx-4 my-2 content-inside">
       This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
       your resume.</div>
      </div>
     </div>
     <br>
 
-     <div class="row">
+     <div class="row move-left">
       <div class="offset-2 row">
-      <h5><b>Who this course is for:</b></h5>
+      <h5>Who this course is for:</h5>
       </div>
       <br>
       <div class="offset-2 row text-justify">
-         <div class="mx-5 my-2">
+         <div class="mx-4 my-2 content-inside">
       This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
       your resume.</div>
      </div>
     </div>
 <br>
-     <div class="row">
+     <div class="row move-left">
       <div class="offset-2 row">
-      <h5><b>what you will take away:</b></h5>
+      <h5>what you will take away:</h5>
       </div>
       <br>
       <div class="offset-2 row text-justify">
-         <div class="mx-5 my-2">
+         <div class="mx-4 my-2 content-inside">
       This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
       your resume.</div>
      </div>
     </div>
 <br>
 
-      <div class="row">
+      <div class="row move-left">
       <div class="offset-2 row" style="width: 100%;">
-      <h5><b>Instructor:</b></h5>
+      <h5>Instructor:</h5>
       </div>
       <br>
       <div class="offset-2 row" style="width: 100%;">
-         <div class="mx-5 my-2 d-flex">
-          <div class="col-1">
+         <div class="mx-4 my-2 d-flex">
+          <div class="col-2">
           <span>
             <img src="assets/round.png" class="round">
           </span>
@@ -229,14 +242,14 @@
           <div class="col" style="width: 100%;">
           <span class="Instructor">
             <b>Manu Vikraman</b><br>
-               CEO & CDO - Swevens Immersive Studio
+               <span class="content-inside">CEO & CDO - Swevens Immersive Studio</span>
           </span>
          </div>
        </div>
       </div>
 
-       <div class="offset-4 row text-center">
-          <div class="col-1">
+       <div class="offset-3 row text-center">
+          <div class="mx-3 col-1">
           <img src="assets/round.png" class="round-small">
           </div>
           <div class="col">
@@ -245,33 +258,36 @@
        </div>
      </div>
 <br>
-      <div class="row">
+      <div class="row move-left">
       <div class="offset-2 row" style="width: 100%;">
-      <h5><b>Duration:</b></h5>
+      <h5>Duration:</h5>
       </div>
       <br>
       <div class="offset-2 row text-justify">
-         <div class="mx-5 my-2">
+         <div class="mx-4 my-2">
       <b>2 months (Mon - Wed - Fri)</b>
           </div>
      </div>
    </div>
 
 
+
 <br>
 
   
- <div class="row">
+ <div class="row move-left">
       <div class="offset-2 row" style="width: 100%;">
-      <h5><b>Course Fee:</b></h5>
+      <h5>Course Fee:</h5>
       </div>
       <br>
       <div class="offset-2 row text-justify">
-         <div class="mx-5 my-2">
-      <b>INR 25000</b> + Applicable taxes
+         <div class="mx-4 my-2">
+      <b>INR 25000</b> <span class="content-inside">+ Applicable taxes</span>
           </div>
      </div>
     </div>
+
+  </div>
 <br>
 <br>
 
