--- a/updated/clients_bootstrap.html
+++ b/updated/clients_bootstrap.html
@@ -28,23 +28,23 @@
 
  
 
-<body>
+<body class="bg-img">
 
   <!--  <img class="background" id="i-img" src="assets/defence.png" /> 
  -->
    
 
   <!--Background Image -->
-    <div class="bg-img">
+    <!-- <div class="bg-img"> -->
 
  <div id="header-file" style="height: 100px;z-index: 1;"></div>
 
 
- <div class="container-fluid contents" style="z-index: -1;margin-top: 5vw;" >
-     <div class="row" >  
+ <div class="container-fluid contents" style="z-index: -1;margin-top: 6vw;" >
+     <div class="row">  
       <div class="col-md-6" style="margin-bottom: 100px;">
         <div class="row justify-content-center">
-        <h5><b>GLOBAL CLIENTS</b></h5>
+        <h6><b>GLOBAL CLIENTS</b></h6>
        </div>
        <div style="margin-top: 100px;"></div>
        <div class="row justify-content-center">
@@ -53,7 +53,7 @@
      </div>
         <div class="col-md-6">
           <div class="row justify-content-center">
-          <h5><b>TECHNOLOGY PARTNER</b></h5>
+          <h6><b>TECHNOLOGY PARTNER</b></h6>
          </div>
          <div style="margin-top: 100px;"></div>
          <div class="row justify-content-center">
@@ -62,7 +62,7 @@
       </div>
     </div>
 </div>
-</div>
+
 </body>
 
 
