--- a/updated/contact_bootstrap.html
+++ b/updated/contact_bootstrap.html
@@ -49,13 +49,13 @@
       <br>
       <div class="row my-2"> 
         <div class="col mx-1 border-box">
-          <h5>AUGMENTED REALITY</h5>
+          <h5 style="font-size: 1.22rem;">AUGMENTED REALITY</h5>
         </div>
         <div class="col mx-1 border-box">
-          <h5>AUGMENTED REALITY</h5>
+          <h5 style="font-size: 1.22rem;">AUGMENTED REALITY</h5>
         </div>
         <div class="col mx-1 border-box">
-          <h5>AUGMENTED REALITY</h5>
+          <h5 style="font-size: 1.22rem;">AUGMENTED REALITY</h5>
         </div>
       </div>
       <br>
@@ -82,7 +82,7 @@
 		    </div>
 		    <div class="col-2 ml-auto">
 		       <div class="btn-group btn-group-sm">
-  					<button type="button" class="btn btn-danger" style="padding: 10% 100%;border-radius: 20px;">Send</button>
+  					<button type="button" class="btn btn-danger" style="padding: 10% 100%;border-radius: 20px;background-color: #F9535E">Send</button>
 			   </div> 
 		    </div>
 		  </div>
@@ -93,30 +93,30 @@
       </div>
     <div class="col-md-3 offset-1">
       <h5>CONTACT US</h5>
-      <p class="my-3">AR experiences can now be launched 
+      <p class="my-3 content-inside">AR experiences can now be launched 
         directly from Safari as part of a new 
         feature called AR Quick Look, 
       </p>
       <br>
       
       <h5>OFFICE ADDRESS</h5>
-      <p class="my-3">1st floor, Srimathi Apartment
+      <p class="my-3 content-inside">1st floor, Srimathi Apartment
 		 Thiruvanmiyur, Chennai
 		 India
       </p>
       <br>
       <h5>KEEP IN TOUCH</h5>
-      <p class="my-4">Mail id <br>
+      <p class="my-4 content-inside">Mail id <br>
         <b>contact@swevens.co</b>
       </p>
-      <p class="my-4">Call <br>
+      <p class="my-4 content-inside">Call <br>
         <b>+919444092103</b>
       </p>
       
-      <div style="display: flex;">
-      	<span class="ml-0"><a href="www.google.com"><i class="fa fa-facebook-square"></i></a></span>
-      	<span class="ml-3"><a href="www.google.com"><i class="fa fa-medium"></i></a></span>
-      	<span class="ml-3"><a href="www.google.com"><i class="fa fa-linkedin-square"></i></a></span>
+      <div style="display: flex;opacity: .5;">
+      	<span class="ml-0"><a href="https://www.facebook.com/swevensindia" target="_blank"><i class="fa fa-facebook-square"></i></a></span>
+      	<span class="ml-3"><a href="https://medium.com/swevens" target="_blank"><i class="fa fa-medium"></i></a></span>
+      	<span class="ml-3"> <a href="https://in.linkedin.com/company/swevens" target="_blank"><i class="fa fa-linkedin-square"></i></a></span>
       </div>
     </div>
   </div>
@@ -131,12 +131,17 @@
 <style type="text/css">
   .border-box:hover
   {
-    border:solid 2px red;
+    border:solid 2px #F9535E;
   }
   .border-box
   {
     border:solid 2px darkgray;
   }
+
+.content-inside
+{
+  color: #666666;
+}
 
 
 
@@ -161,6 +166,7 @@
   font-size: 90%;
   transform: translate3d(0, -100%, 0);
   opacity: 1;
+  color: #F9535E;
 }
 
 .border-change
