--- a/updated/index.html
+++ b/updated/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="design/responsive.css">
     <link rel="stylesheet" href="design/navbar.css">
     
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <script
     src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -52,10 +53,19 @@
     			</h3>
     		</div>
         <nav>
-            <a href="https://in.linkedin.com/company/swevens" target="_blank">LinkedIn</a>
-            <a href="https://www.instagram.com/swevenshq/" target="_blank">Instagram</a>
-            <a href="https://www.facebook.com/swevensindia" target="_blank">Facebook</a>
-            <a href="https://medium.com/swevens" target="_blank">Medium</a>
+
+            <a href="https://www.facebook.com/swevensindia" target="_blank"><i class="fa fa-facebook-square"></i></a>
+            <a href="https://medium.com/swevens" target="_blank"><i class="fa fa-medium"></i></a>
+            <a href="https://in.linkedin.com/company/swevens" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+           <!--  <a href="https://www.instagram.com/swevenshq/" target="_blank">Instagram</a> -->
+            
+
+
+            <!-- <div style="display: flex;">
+            <span ><a href="www.google.com"><i class="fa fa-facebook-square"></i></a></span>
+            <span ><a href="www.google.com"><i class="fa fa-medium"></i></a></span>
+            <span ><a href="www.google.com"><i class="fa fa-linkedin-square"></i></a></span>
+            </div> -->
 
         </nav>
     </footer>
