--- a/updated/Training_bootstrap.html
+++ b/updated/Training_bootstrap.html
@@ -105,7 +105,8 @@
    }
    .mx-4
    {
-      margin-left: 0em !important
+      margin-left: 0em !important;
+          margin-right: 2em !important;
    }
    .ml-manual
 {
