UI issues fixed

--- a/updated/Training_bootstrap.html
+++ b/updated/Training_bootstrap.html
@@ -24,7 +24,7 @@
 
     .item-certify
     {
-      border-left: solid 2px #F9414D;
+      border-left: solid 2.5px #F9414D;
       padding-left: 20px;
     }
 
@@ -83,11 +83,12 @@
 
 .ml-manual
 {
-  margin-left: -5em;
+  margin-left: -4em;
 }
 .content-inside
 {
-  color: #666666;
+  color: #6E6E6E;
+  font-size: 1.2em;
 }
 
 @media screen and (max-width: 598px)
@@ -105,8 +106,7 @@
    }
    .mx-4
    {
-      margin-left: 0em !important;
-          margin-right: 2em !important;
+      margin-left: 0em !important
    }
    .ml-manual
 {
@@ -123,6 +123,15 @@
    }
 }
 
+body
+{
+  font-family: seui;
+}
+
+.theading
+{
+  font-family: seui-b;
+}
 
 </style>
 </head>
@@ -132,36 +141,34 @@
 
   <div id="header-file" style="height: 100px;"></div>
    
-  <div class="container" style="margin-top: 3vw;">
+  <div class="container" style="margin-top: 5vw;">
 
-    <h2><b>AR VR Hands on Design Training Programee</b></h2>
+    <h1 class="theading">AR VR Hands on Design Training</h1>
 
-    <h6 class="my-3" style="color: #727171;">Hands-on AR VR design training</h6>
+    <h5 class="my-3" style="color: #727171;">Hands-on AR VR design training</h5>
 
     <br>
 
-<div class="row my-5">
-  <div class="row offset-1">
-    <div class="col ">
-    <h5 class="item-certify"><b>Certified UX & UI <br> AR & VR Designer</b></h5>
+<div class="row my-5 offset-1" style="font-family: seui-b">
+    <div class="col-3">
+    <h4 class="item-certify">Certified UX & UI <br> AR & VR Designer</h4>
+    </div> 
+    <div class="col-3 offset-1">
+     <h4 class="item-certify cert1">Certified UX & UI <br> AR & VR Designer</h4>
     </div>
-    <div class=" col">
-     <h5 class="item-certify cert1"><b>Certified UX & UI <br> AR & VR Designer</b></h5>
+    <div class="col-3 offset-1">
+     <h4 class="item-certify cert2">Certified UX & UI <br> AR & VR Designer</h4>
     </div>
-    <div class="col">
-     <h5 class="item-certify cert2"><b>Certified UX & UI <br> AR & VR Designer</b></h5>
-    </div>
-  </div>
 </div>
   <br>
-      <div class="ml-manual">
+      <div class="ml-manual" style="font-family: seui;">
       <div class="row move-left">
       <div class="offset-2 row">
       <h5>Course Introduction</h5>
       </div>
       <br>
-      <div class="offset-2 row text-justify">
-        <div class="mx-4 my-2 content-inside">
+      <div class="offset-2 row ">
+        <div class="mx-5 my-3 content-inside">
       Zynga is a leading developer of the world's most popular social games that are played by millions of people
       around the world each day. We are headquartered in San Francisco and have additional offices in the U.S ,
       Canada, U.K and India. Since our founding in 2007, our mission has been to connect the world through games
@@ -177,14 +184,14 @@
       <h5>What you’ll learn</h5>
       </div>
       <br>
-      <div class="offset-2 row text-justify">
-         <div class="mx-4 my-2 content-inside">
-      Development of key game systems.
-      Contribute to design discussions and key design decisions.
+      <div class="offset-2 row ">
+         <div class="mx-5 my-3 content-inside">
+      Development of key game systems.<br>
+      Contribute to design discussions and key design decisions.<br>
       Work closely with designers, software engineers, artists, product managers, and producers to deliver high quality
-      features from concept to completion.
-      Create and maintain detailed designs for all phases of development.
-      Clearly communicate design intent to team.
+      features from concept to completion.<br>
+      Create and maintain detailed designs for all phases of development.<br>
+      Clearly communicate design intent to team.<br>
       Experience developing mobile games for either iPhone or Android devices.</div>
      </div>
     </div>
@@ -195,8 +202,8 @@
       <h5>Are there any course requirements or prerequisites?</h5>
       </div>
       <br>
-      <div class="offset-2 row text-justify">
-         <div class="mx-4 my-2 content-inside">
+      <div class="offset-2 row ">
+         <div class="mx-5 my-3 content-inside">
       This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
       your resume.</div>
      </div>
@@ -208,8 +215,8 @@
       <h5>Who this course is for:</h5>
       </div>
       <br>
-      <div class="offset-2 row text-justify">
-         <div class="mx-4 my-2 content-inside">
+      <div class="offset-2 row ">
+         <div class="mx-5 my-3 content-inside">
       This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
       your resume.</div>
      </div>
@@ -220,8 +227,8 @@
       <h5>what you will take away:</h5>
       </div>
       <br>
-      <div class="offset-2 row text-justify">
-         <div class="mx-4 my-2 content-inside">
+      <div class="offset-2 row ">
+         <div class="mx-5 my-3 content-inside">
       This internship/co-op is for currently enrolled students only. Please include a link to your online portfolio within
       your resume.</div>
      </div>
@@ -234,7 +241,7 @@
       </div>
       <br>
       <div class="offset-2 row" style="width: 100%;">
-         <div class="mx-4 my-2 d-flex">
+         <div class="mx-5 my-3 d-flex">
           <div class="col-2">
           <span>
             <img src="assets/round.png" class="round">
@@ -242,7 +249,7 @@
           </div>
           <div class="col" style="width: 100%;">
           <span class="Instructor">
-            <b>Manu Vikraman</b><br>
+            <span class="theading">Manu Vikraman</span><br>
                <span class="content-inside">CEO & CDO - Swevens Immersive Studio</span>
           </span>
          </div>
@@ -265,8 +272,8 @@
       </div>
       <br>
       <div class="offset-2 row text-justify">
-         <div class="mx-4 my-2">
-      <b>2 months (Mon - Wed - Fri)</b>
+         <div class="mx-5 my-3 theading">
+      2 months (Mon - Wed - Fri)
           </div>
      </div>
    </div>
@@ -282,8 +289,8 @@
       </div>
       <br>
       <div class="offset-2 row text-justify">
-         <div class="mx-4 my-2">
-      <b>INR 25000</b> <span class="content-inside">+ Applicable taxes</span>
+         <div class="mx-5 my-3">
+      <span class="theading">INR 25000</span> <span class="content-inside">+ Applicable taxes</span>
           </div>
      </div>
     </div>
