--- a/updated/clients_bootstrap.html
+++ b/updated/clients_bootstrap.html
@@ -40,20 +40,20 @@
  <div id="header-file" style="height: 100px;z-index: 1;"></div>
 
 
- <div class="container-fluid contents" style="z-index: -1;margin-top: 6vw;" >
+ <div class="container-fluid contents" style="z-index: -1;margin-top: 8vw;font-family: fut;" >
      <div class="row">  
-      <div class="col-md-6" style="margin-bottom: 100px;">
+      <div class="col-md-5 offset-md-1" style="margin-bottom: 100px;">
         <div class="row justify-content-center">
-        <h6><b>GLOBAL CLIENTS</b></h6>
+        <h6 style="font-size: .9em;">GLOBAL CLIENTS</h6>
        </div>
        <div style="margin-top: 100px;"></div>
        <div class="row justify-content-center">
         <img src="assets/client1.png"/>
       </div>
      </div>
-        <div class="col-md-6">
+        <div class="col-md-5">
           <div class="row justify-content-center">
-          <h6><b>TECHNOLOGY PARTNER</b></h6>
+          <h6 style="font-size: .9em;">TECHNOLOGY PARTNER</h6>
          </div>
          <div style="margin-top: 100px;"></div>
          <div class="row justify-content-center">
