--- a/updated/work_bootstrap.html
+++ b/updated/work_bootstrap.html
@@ -99,7 +99,7 @@
       
       </div>
 
-      <div class="mx-4 container-fluid" style="margin-top:3vw !important;">
+      <div class="mx-4 container-fluid" style="position: absolute;top: 40%;transform: translateY(-40%);">
       <div class="carousel">
         <div class="carousel-cell"><img src="assets/2.png" style="width: 60vw;"></div>
         <div class="carousel-cell"> <img src="assets/1.png" style="width:30vw;"></div>
@@ -147,7 +147,7 @@
       
   </div-->
 
-    <div class="container-fluid my-4">
+    <div class="container-fluid my-5" style="position: absolute;bottom: 0;height: 150px;">
     <div class="row d-flex reverse-row justify-contents-center">
     	<div class="col-3 offset-1">
     		<h3 class="c-bottom-heading"><span id="bottom-heading">IMMERSIVE<br>EDUCATION</span></h3>
