--- a/wedding/index.html
+++ b/wedding/index.html
@@ -650,6 +650,7 @@
 
 
 <script type="text/javascript">
+
 var map = L.map('map').setView([12.402203, 78.766479], 8);
 
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -663,18 +664,29 @@ var marker2 = L.marker([12.915625, 79.133477]).addTo(map);
 var marker3 = L.marker([11.682310, 78.215266]).addTo(map);
 
 
-marker1.bindPopup("<img src='images/boy.jpeg' height='100px' width='100px' class='img'/><br><center><p>SATHISH HOME</p></center>");
-marker2.bindPopup("<img src='images/D.jpg' height='100px' width='100px' class='img'/><br><center><p>HASWINI HOME</p></center>");
-marker3.bindPopup("<img src='images/wedd.jfif' height='100px' width='100px' class='img'/><br><center><p>MARRIAGE HALL</p></center>").openPopup();
+marker1.bindPopup("<img src='images/boy.jpeg' height='100px' width='100px' class='img'/><br><center><p>SATHISH HOME</p></center>")
+marker2.bindPopup("<img src='images/D.jpg' height='100px' width='100px' class='img'/><br><center><p>HASWINI HOME</p></center>")
+marker3.bindPopup("<img src='images/wedd.jfif' height='100px' width='100px' class='img'/><br><center><p>MARRIAGE HALL</p></center>").
+openPopup();
 
 
 
 
 var popup = L.popup();
 
+function onMapClick(e) {
+    	popup
+        .setLatLng(e.latlng)
+        .setContent("You clicked the map at " + e.latlng.toString())
+        .openOn(map);
+}
+
 
 map.on('click', onMapClick);
+
+
 </script>
+
 
 	</body>
 </html>
