--- a/wedding/index.html
+++ b/wedding/index.html
@@ -6,11 +6,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Wedding</title>
+	<title>Wedding Invitation</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="We are to share this special day with all of you and kindly grace this occasion with your presence and blessing." />
+	<meta name="keywords" content="wedding, responsive, invitation, template" />
+	<meta name="author" content="Rahul" />
 
   <!-- 
 	//////////////////////////////////////////////////////
@@ -87,7 +87,7 @@
 						<li><a href="#family">Family</a></li>
 						<li><a href="#moments">Gallery</a></li>
 						<li><a href="#location">Location</a></li>
-						<li><a href="#invite">E-Initation</a></li>
+						<li><a href="#invite">E-Invitation</a></li>
 					</ul>
 				</div>
 			</div>
@@ -103,7 +103,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Sathish &amp; Haswini</h1>
-							<h2>We Are Getting Married</h2>
+							<h2>Here we are getting hitched</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<!-- <p><a href="#" class="btn btn-default btn-sm">Save the date</a></p> -->
 						</div>
@@ -178,7 +178,7 @@
 										<span>September 15</span>
 										<!-- <span>November, 2016</span> -->
 									</div>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>we are to share this special day with all of you and kindly grace this occasion with your presence and blessing.</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
@@ -194,7 +194,8 @@
 										<span>September 18</span>
 										<!-- <span>November, 2016</span> -->
 									</div>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Destiny brought us together and now love will seal our bond.
+									kindly grace this occasion with your presence and blessing.</p>
 								</div>
 							</div>
 						</div>
@@ -213,7 +214,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<!-- <span>We Love Each Other</span> -->
 					<h2>Our Family</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<p>Being a family means you will love and be loved for the rest of your life.</p>
 				</div>
 			</div>
 			<div class="row" id="family">
@@ -243,9 +244,9 @@
 									<!-- <span class="date">December 28, 2015</span> -->
 								</div>
 								<div class="timeline-body">
-									<span >Father</span><br><span style="color: white;">THANGARAJ C</span><br><br>
-									<span >Mother</span><br><span>KALYANI T</span><br><br>
-									<span >Sister</span><br><span>RAMYA PRIYA T</span> 
+									<span >Father</span><br><span style="color: white;">PALANI G</span><br><br>
+									<span >Mother</span><br><span>KALAVATHI P</span><br><br>
+									<span >BROTHER</span><br><span>LOKESHWARAN P</span> 
 								</div>
 							</div>
 						</li>
@@ -277,7 +278,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<span>Our Memories</span>
 					<h2>Best Moments</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<p>The happily ever after starts from now onwards.</p>
 				</div>
 			</div>
 			<div class="row row-bottom-padded-md">
@@ -427,7 +428,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading" style="margin-bottom: 0px !important;">
 						<span>TO REACH US</span>
 						<h2>Our Locations</h2>
 					</div>
@@ -564,8 +565,8 @@
 								<input type="email" class="form-control" id="email" placeholder="Email">
 							</div>
 						</div> -->
-						<div class="col-md-4 col-sm-4 d-flex justify-content-center">
-							<button type="submit" class="btn btn-default btn-block">DOWNLOAD</button>
+						<div class="col-md-4 col-sm-4 d-flex justify-content-center col-md-offset-4 text-center">
+							<a href="invitation.pdf" download class="btn btn-default btn-block">DOWNLOAD</a>
 						</div>
 					</form>
 				</div>
@@ -574,22 +575,28 @@
 	</div>
 </div>
 
-	<footer id="fh5co-footer" role="contentinfo">
+
+	<footer id="fh5co-footer" role="contentinfo" style="padding: 4em;background-color: #0C0C0D">
 		<div class="container">
 
 			<div class="row copyright">
-				<div class="col-md-12 text-center">
-					<!-- <p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
-					</p> -->
+				<div class="col-md-12 ">
+					 
+					<div class="text-center">
+						<img src="images/dp.jpg" height="100px" width="100px" style="border-radius: 50px;border:solid 2px #F14E95;" />
+					</div>
+					<br>
 					<p>
-						<ul class="fh5co-social-icons">
+						<!-- <small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> --> 
+						<small class="block text-center"> &nbsp; Designed by <a>RAHUL RAJ N</a></small>
+					</p>
+					<p>
+						<!-- <ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
+						</ul> -->
 					</p>
 				</div>
 			</div>
@@ -664,9 +671,9 @@ var marker2 = L.marker([12.915625, 79.133477]).addTo(map);
 var marker3 = L.marker([11.682310, 78.215266]).addTo(map);
 
 
-marker1.bindPopup("<img src='images/boy.jpeg' height='100px' width='100px' class='img'/><br><center><p>SATHISH HOME</p></center>")
-marker2.bindPopup("<img src='images/D.jpg' height='100px' width='100px' class='img'/><br><center><p>HASWINI HOME</p></center>")
-marker3.bindPopup("<img src='images/wedd.jfif' height='100px' width='100px' class='img'/><br><center><p>MARRIAGE HALL</p></center>").
+marker1.bindPopup("<img src='images/boy.jpeg' height='50px' width='50px' class='img'/><p>SATHISH HOME</p>")
+marker2.bindPopup("<img src='images/D.jpg' height='50px' width='50px' class='img'/><center><p>HASWINI HOME</p></center>")
+marker3.bindPopup("<img src='images/wedd.jfif' height='50px' width='50px' class='img'/><center><p>MARRIAGE HALL</p></center>").
 openPopup();
 
 
